# Gcore

./: build.gradle  gradle.properties  local.properties  settings.gradle
.github/workflows/: main.yml
gcore/: build.gradle  consumer-rules.pro  proguard-rules.pro
gcore/src/main/: AndroidManifest.xml
gcore/src/main/aidl/android/accounts/: IAccountAuthenticator.aidl  IAccountAuthenticatorResponse.aidl  IAccountManagerResponse.aidl
gcore/src/main/aidl/android/app/: IServiceConnection.aidl  IStopUserCallback.aidl  IWallpaperManagerCallback.aidl
gcore/src/main/aidl/android/content/: IIntentReceiver.aidl  ISyncAdapter.aidl  ISyncContext.aidl
gcore/src/main/aidl/android/database/: IContentObserver.aidl
gcore/src/main/aidl/android/location/: ILocationListener.aidl
gcore/src/main/aidl/android/net/: IConnectivityManager.aidl
gcore/src/main/cpp/: BoxCore.cpp  BoxCore.h  CMakeLists.txt  IO.cpp  Log.h  hidden_api.cpp
gcore/src/main/cpp/JniHook/: JniHook.cpp
gcore/src/main/java/android/app/: ActivityThread.java  ContentProviderHolder.java
gcore/src/main/java/android/content/: IContentProvider.java
gcore/src/main/java/com/gcore/: GreenBoxCore.java
gcore/src/main/java/com/jnihook/: MethodUtils.java  ReflectCore.java
gcore/src/main/res/layout/: activity_launcher.xml
gcore/src/main/res/values/: strings.xml  themes.xml
gcore/src/main/res/xml/: file_paths.xml
vbox-sdk/: build.gradle  proguard-rules.pro  proguard.txt
vbox-sdk/src/main/: AndroidManifest.xml
vbox-sdk/src/main/aidl/android/Meta/: IMetaActivation.aidl
vbox-sdk/src/main/cpp/: Android.mk  BoxAnti.cpp  BoxCore.cpp  BoxCore.h
vbox-sdk/src/main/cpp/Hook/: DexFileHook.cpp
vbox-sdk/src/main/cpp/IO/: IO.cpp
vbox-sdk/src/main/cpp/JniHook/: JniHook.cpp
vbox-sdk/src/main/cpp/SandHook/: AntiDelete.cpp
vbox-sdk/src/main/res/layout/: activity_launcher.xml
vbox-sdk/src/main/res/values/: styles.xml
(+504 files in other folders)
